--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
     height: 100vh;
     margin: 0;
+    padding: 0;
     overflow: hidden;
     background: linear-gradient(135deg, #ff758c, #ff7eb3);
     display: flex;
@@ -11,7 +12,7 @@ body {
 
 .container {
     background: white;
-    padding: 40px;
+    padding: 20px;
     border-radius: 15px;
     text-align: center;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
@@ -20,6 +21,7 @@ body {
 
 h1 {
     color: #ff4d6d;
+    font-size: 24px;
 }
 
 h2 {
@@ -32,11 +34,13 @@ h2 {
 }
 
 button {
-    padding: 12px 25px;
+    padding: 12px 20px;
     font-size: 18px;
     border: none;
-    border-radius: 10px;
+    border-radius: 25px;
     cursor: pointer;
+    background: red;
+    color: white;
 }
 
 #yesBtn {
@@ -74,4 +78,5 @@ button {
         transform: translateY(-800px);
         opacity: 0;
     }
+
 }
